--- a/style/blog.css
+++ b/style/blog.css
@@ -5,18 +5,11 @@ body {
     margin: 0;
     font-family: 'Montserrat', 'sans-serif';
 }
-
-p, blockquote {
-    font-size: .9em;
-    line-height: 1.6em;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;    
 }
-
 h1 {
     font-family: 'Montserrat', 'sans-serif';
 }
@@ -26,14 +19,11 @@ h2 {
     font-size: 1.2em;
     margin-bottom: 0;
 }
-
 .exit-btn {
     text-align: right;
     margin: 0 5% 2% 0;
     padding: 6% 12%;
-    
 }
-
 nav ul {
     position: absolute;
     width: 30%;
@@ -44,7 +34,6 @@ nav ul {
     height: auto;
     z-index: 7;
 }
-
 nav ul li a {
     color: white;
     text-decoration: none;
@@ -53,135 +42,74 @@ nav ul li a {
     padding: 1em 2em;
     background-color: rgb(52,59,63);
 }
-
 nav ul li a:hover {
     background-color: rgb(65,73,78)
 }
-
 .container {
     text-align: center;
     padding: .8em 1.2em;
 }
-
 .logo {
-    width: 80px;
-    height: 50px;
+    width: 110px;
+    height: 80px;
 }
-
 .hide-mobile {
     display: none;
 }
-
 header {
     display: flex;
     justify-content: space-between;
     height: 40px;
     z-index: 1;
 }
-
 .menu {
     width: 25px;
     margin-top: 50%;
 }
-
-.map {
-    width: 100%;
-    height: 30em;
-}
-
-.map-container p{
-    background: #BDF3F0;
-    border-radius: 20px;
-    padding: .5em;
-    font-weight: bold;
-}
-
-.map-container a {
-    color: black;
-    text-decoration: none;
-}
-
-.buttons-container {
-    position: relative;
-
-}
-
-.buttons-container ul {
+.post-container ul{
     display: flex;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
+    flex-wrap: wrap;
+    align-items: center;
 }
-
-.buttons-container ul li{
-    margin-right: 5%;
+.post-container ul li {
+    width: 33.33%;
 }
-
-.buttons-container ul li img {
-    width: 6em;
+.post-container ul li img {
+    justify-content: center;
+    width: 80%;
 }
-
-.arrow {
-    position: absolute;
-    left: 87%;
-    top: 30%;
-    margin: 0;
+.post-container ul li p{
+    font-size: 1em;
+    margin: 0 0 .5em;
 }
-.arrow img{
-    width: 2em;
+.blog-box {
+    box-shadow: 10px 10px 8px grey;
+    height: 13em;
+    margin-bottom: 2%;
+    background-color: #BDF3F0;
 }
-
-footer , footer a{
+footer {
     background: #5D5D5D;
     color: white;
-    text-decoration: none;
-    font-size: .9em;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
-
-footer li {
-    margin: 2.5px;
-
+.footer-icon {
+    width: 40px;
+    height: 40px;
 }
-footer hr {
-    border-color: #BDF3F0;
-    margin-bottom: 1%;
+.footer-list {
+    display: flex;
+    justify-content: center;
 }
-
-.cta {
-    color: black;
-    background: #BDF3F0;
-    width: calc(50% - 5em);
-    display: block;
-    border-radius: 20px;
-    padding: .5em;
-    text-decoration: none;
-    font-size: .8em;
-    margin: 1% auto 2%;
-    position: relative;
-    z-index: 4;
+.footer-list li {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 0;
 }
 
 @media only screen and (min-width: 760px){
-    .buttons-container ul li img {
-        width: 9em;
-    }
-
-    .arrow {
-        position: absolute;
-        left: 92%;
-        top: 30%;
-        margin: 0;
-    }
-
-    .map-container p{
-        background: #BDF3F0;
-        border-radius: 25px;
-        padding: .4em;
-        font-size: 1.2em;
-        width: 50%;
-        margin-left: 25%;
-    }
-
     h2 {
         font-size: 2em;
         padding-top: 0;
@@ -236,42 +164,12 @@ footer hr {
         width: 90%;
         margin-left: 5%;
     }
-
-    .map {
-        height: 35em;
-        width: 90%;
-    }
-
-    .linkedin a {
-        font-size: 1.3em;
-    }
-
-    .linkedin {
-        display: flex;
-        justify-content: center;
-    }
-    
-    .linkedin li {
-        margin: 20px;
-    }
 }
 
 @media only screen and (min-width: 1200px){
     .hide-scroll {
         display: none;
     }
-
-    .buttons-container ul {
-        display: flex;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        white-space: nowrap;
-    }
-    
-    .buttons-container ul li img {
-        width: 11em;
-    }
-
     .hide-mobile{
         display: block;
     }
