--- a/style/contact.css
+++ b/style/contact.css
@@ -4,29 +4,19 @@ body {
     margin: 0;
     font-family: 'Montserrat', 'sans-serif';
 }
-
-p, blockquote {
-    font-size: 1.5em;
-    line-height: 1.6em;
-}
-
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;    
 }
-
 h1 {
     font-family: 'Montserrat', 'sans-serif';
 }
-
 .exit-btn {
     text-align: right;
     margin: 0 5% 2% 0;
-    padding: 6% 12%;
-    
+    padding: 6% 12%;  
 }
-
 nav ul {
     position: absolute;
     width: 30%;
@@ -37,7 +27,6 @@ nav ul {
     height: auto;
     z-index: 7;
 }
-
 nav ul li a {
     color: white;
     text-decoration: none;
@@ -46,76 +35,54 @@ nav ul li a {
     padding: 1em 2em;
     background-color: rgb(52,59,63);
 }
-
 nav ul li a:hover {
     background-color: rgb(65,73,78)
 }
-
 .container {
     text-align: center;
     padding: .8em 1.2em;
 }
-
 .contact-info {
     text-align: left;
     margin-left: 15%;
 }
 .logo {
-    width: 80px;
-    height: 50px;
+    width: 110px;
+    height: 80px;
 }
-
 .hide-mobile {
     display: none;
 }
-
 header {
     display: flex;
     justify-content: space-between;
     height: 40px;
     z-index: 1;
 }
-
 .menu {
     width: 25px;
     margin-top: 50%;
 }
-
 section h1 {
     font-size: 2.7em;
     margin: 5% 0 0 0;
 }
-
 footer {
     background: #5D5D5D;
     color: white;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
-    height: 5em;
 }
-
-footer hr {
-    border-color: #BDF3F0;
+.footer-icon {
+    width: 40px;
+    height: 40px;
 }
-
-.cta {
-    color: black;
-    background: #BDF3F0;
-    width: calc(50% - 5em);
-    display: block;
-    border-radius: 20px;
-    padding: .5em;
-    text-decoration: none;
-    font-size: .8em;
-    margin: 3% auto 5%;
-    position: relative;
-    z-index: 4;
+.footer-list {
+    display: flex;
+    justify-content: center;
 }
-
-.linkedin a{
-    color: white;
-    text-decoration: none;
+.footer-list li {
+    margin-left: 10px;
+    margin-right: 10px;
+    padding: 0;
 }
 
 input[type=text], select, textarea{
@@ -193,7 +160,7 @@ clear: both;
         display: flex;
     }
 
-    .container ul li {
+    .form-container ul li {
         justify-content: space-between;
         width: 50%;
     }
@@ -237,22 +204,5 @@ clear: both;
 
     nav ul li a:active {
         color: #28A9A1;
-    }
-    .cta {
-        width: 25%;
-        padding: .8em;
-        font-size: 1.2em;
-        margin: 1% auto 2%;
-    }
-
-    .linkedin a {
-        font-size: 1em;
-    }
-    .linkedin {
-        display: flex;
-        justify-content: center;
-    }
-    .linkedin li {
-        margin: 20px;
     }
 }
