--- a/style/blog.css
+++ b/style/blog.css
@@ -19,39 +19,33 @@ h2 {
     font-size: 1.2em;
     margin-bottom: 0;
 }
-.exit-btn {
-    text-align: right;
-    margin: 0 5% 2% 0;
-    padding: 6% 12%;
-}
 nav ul {
     position: absolute;
-    width: 30%;
-    top: 2%;
+    width: 100%;
     right: 0;
-    text-align: left;
-    background: rgb(36,41,44);
+    text-align: center;
+    background: white;
     height: auto;
     z-index: 7;
 }
 nav ul li a {
-    color: white;
+    color: rgb(36,41,44);
     text-decoration: none;
     display: block;
     width: 100%;
     padding: 1em 2em;
-    background-color: rgb(52,59,63);
+    background-color: white;
 }
 nav ul li a:hover {
-    background-color: rgb(65,73,78)
+    color: grey;
 }
 .container {
     text-align: center;
     padding: .8em 1.2em;
 }
 .logo {
-    width: 110px;
-    height: 80px;
+    width: 80px;
+    height: 50px;
 }
 .hide-mobile {
     display: none;
@@ -72,7 +66,7 @@ header {
     align-items: center;
 }
 .post-container ul li {
-    width: 33.33%;
+    width: 50%;
 }
 .post-container ul li img {
     justify-content: center;
@@ -84,7 +78,7 @@ header {
 }
 .blog-box {
     box-shadow: 10px 10px 8px grey;
-    height: 13em;
+    height: 8em;
     margin-bottom: 2%;
     background-color: #BDF3F0;
 }
@@ -96,16 +90,16 @@ footer {
     bottom: 0;
 }
 .footer-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 .footer-list {
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 .footer-list li {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     padding: 0;
 }
 
@@ -123,11 +117,13 @@ footer {
     .hide-desktop {
         display: none;
     }
-
+    .logo {
+        width: 110px;
+        height: 80px;
+    }
     .menu {
         z-index: 4;
     }
-
     .container h1 {
         padding: 3% 0 0;
     }
@@ -139,30 +135,48 @@ footer {
         display: flex;
         padding-top: 0;
     }
-
     nav ul li {
         float: left;
         margin-right: 20px;
     }
-
     nav ul li a{
         color: black;
         background: inherit;
         text-align: right;
         padding: .5em .5em;
     }
-
     nav ul li a:hover {
         color: #28A9A1;
         background: white;
     }
-
     nav ul li a:active {
         color: #28A9A1;
     }
     .container {
         width: 90%;
         margin-left: 5%;
+    }
+    .post-container ul li {
+        width: 33.33%;
+    }
+    .blog-box {
+        box-shadow: 10px 10px 8px grey;
+        height: 13em;
+        margin-bottom: 2%;
+        background-color: #BDF3F0;
+    }
+    .footer-icon {
+        width: 40px;
+        height: 40px;
+    }
+    .footer-list {
+        display: flex;
+        justify-content: center;
+    }
+    .footer-list li {
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 0;
     }
 }
 
