--- a/style/about.css
+++ b/style/about.css
@@ -17,42 +17,28 @@ ul {
     margin: 0;
     padding: 0;    
 }
-
 h1 {
     font-family: 'Alef', sans-serif;
-}
-
-.exit-btn {
-    text-align: right;
-    margin: 0 5% 2% 0;
-    padding: 6% 12%;
-    
-}
-
-nav ul {
+}nav ul {
     position: absolute;
-    width: 30%;
-    top: 2%;
+    width: 100%;
     right: 0;
-    text-align: left;
-    background: rgb(36,41,44);
+    text-align: center;
+    background: white;
     height: auto;
     z-index: 7;
 }
-
 nav ul li a {
-    color: white;
+    color: rgb(36,41,44);
     text-decoration: none;
     display: block;
     width: 100%;
     padding: 1em 2em;
-    background-color: rgb(52,59,63);
+    background-color: white;
 }
-
 nav ul li a:hover {
-    background-color: rgb(65,73,78)
+    color: grey;
 }
-
 .container {
     text-align: center;
     padding: .8em 1.2em;
@@ -60,8 +46,8 @@ nav ul li a:hover {
 }
 
 .logo {
-    width: 110px;
-    height: 80px;
+    width: 80px;
+    height: 50px;
 }
 
 .hide-mobile {
@@ -125,16 +111,17 @@ footer {
     bottom: 0;
 }
 .footer-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
 }
 .footer-list {
     display: flex;
-    justify-content: center;
+    justify-content: left;
 }
 .footer-list li {
-    margin: 10px;
-    margin-bottom: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 0;
 }
 
 @media only screen and (min-width: 1024px){
@@ -146,6 +133,10 @@ footer {
     }
     .menu {
         z-index: 4;
+    }
+    .logo {
+        width: 110px;
+        height: 80px;
     }
     .container h1 {
         padding: 3% 0 0;
@@ -209,6 +200,18 @@ footer {
         margin-right: auto;
         width: 70%;
         left: 12%;
+    }
+    .footer-icon {
+        width: 40px;
+        height: 40px;
+    }
+    .footer-list {
+        display: flex;
+        justify-content: center;
+    }
+    .footer-list li {
+        margin: 10px;
+        margin-bottom: 0;
     }
 }
 
