--- a/style/main.css
+++ b/style/main.css
@@ -14,40 +14,28 @@ ul {
     margin: 0;
     padding: 0;    
 }
-
 h1 {
     font-family: 'Montserrat', 'sans-serif';
 }
-
-.exit-btn {
-    text-align: right;
-    margin: 0 5% 2% 0;
-    padding: 6% 12%;
-    
-}
-
 nav ul {
     position: absolute;
-    width: 30%;
-    top: 2%;
+    width: 100%;
     right: 0;
-    text-align: left;
-    background: rgb(36,41,44);
+    text-align: center;
+    background: white;
     height: auto;
     z-index: 7;
 }
-
 nav ul li a {
-    color: white;
+    color: rgb(36,41,44);
     text-decoration: none;
     display: block;
     width: 100%;
     padding: 1em 2em;
-    background-color: rgb(52,59,63);
+    background-color: white;
 }
-
 nav ul li a:hover {
-    background-color: rgb(65,73,78)
+    color: grey;
 }
 
 .container {
@@ -56,8 +44,8 @@ nav ul li a:hover {
 }
 
 .logo {
-    width: 110px;
-    height: 80px;
+    width: 80px;
+    height: 50px;
     z-index: 2;
     margin: 0;
 }
@@ -136,8 +124,17 @@ footer {
     bottom: 0;
 }
 .footer-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
+}
+.footer-list {
+    display: flex;
+    justify-content: left;
+}
+.footer-list li {
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 0;
 }
 
 @media only screen and (min-width: 760px){
@@ -178,6 +175,12 @@ footer {
     }
     .menu {
         z-index: 1;
+    }
+    .logo {
+        width: 110px;
+        height: 80px;
+        z-index: 2;
+        margin: 0;
     }
     nav ul {
         position: inherit;
@@ -237,6 +240,10 @@ footer {
     }
     .projects-container ul li blockquote{
         font-size: 1em;
+    }
+    .footer-icon {
+        width: 40px;
+        height: 40px;
     }
     .footer-list {
         display: flex;
