--- a/style/contact.css
+++ b/style/contact.css
@@ -35,6 +35,14 @@ nav ul li a:hover {
 .container {
     text-align: center;
     padding: .8em 1.2em;
+    width: 90%;
+}
+.container h1{
+    margin: 0;
+    padding-top: 3%;
+    padding-bottom: 0;
+    font-family: 'Montserrat', 'sans-serif';
+    font-size: 2.2em;
 }
 .contact-info {
     text-align: left;
@@ -57,10 +65,6 @@ header {
     width: 25px;
     margin-top: 50%;
 }
-section h1 {
-    font-size: 2.7em;
-    margin: 5% 0 0 0;
-}
 footer {
     background: #5D5D5D;
     color: white;
@@ -81,7 +85,6 @@ footer {
     margin-right: 5px;
     padding: 0;
 }
-
 input[type=text], select, textarea{
     width: 100%;
     padding: 12px;
@@ -201,5 +204,18 @@ clear: both;
         position: relative;
         width: 100%;
         bottom: 0;
+    }
+    .footer-icon {
+        width: 40px;
+        height: 40px;
+    }
+    .footer-list {
+        display: flex;
+        justify-content: center;
+    }
+    .footer-list li {
+        margin-left: 10px;
+        margin-right: 10px;
+        padding: 0;
     }
 }
