--- a/style/blog.css
+++ b/style/blog.css
@@ -43,6 +43,13 @@ nav ul li a:hover {
     text-align: center;
     padding: .8em 1.2em;
 }
+.container h1{
+    margin: 0;
+    padding-top: 3%;
+    padding-bottom: 0;
+    font-family: 'Montserrat', 'sans-serif';
+    font-size: 2.2em;
+}
 .logo {
     width: 80px;
     height: 50px;
