--- a/style/main.css
+++ b/style/main.css
@@ -24,14 +24,14 @@ nav ul {
     text-align: center;
     background: white;
     height: auto;
-    z-index: 7;
+    z-index: 2;
 }
 nav ul li a {
     color: rgb(36,41,44);
     text-decoration: none;
     display: block;
     width: 100%;
-    padding: 1em 2em;
+    padding: 1em 0;
     background-color: white;
 }
 nav ul li a:hover {
@@ -46,7 +46,7 @@ nav ul li a:hover {
 .logo {
     width: 80px;
     height: 50px;
-    z-index: 2;
+    z-index: 3;
     margin: 0;
 }
 
