--- a/style/blog.css
+++ b/style/blog.css
@@ -93,7 +93,8 @@ header {
 }
 .blog-box {
     box-shadow: 10px 10px 8px grey;
-    height: 8em;
+    height: 6em;
+    /* width: 4em; */
     margin-bottom: 2%;
     background-color: #BDF3F0;
 }
