--- a/style/blog.css
+++ b/style/blog.css
@@ -5,124 +5,36 @@ body {
     margin: 0;
     font-family: 'Montserrat', 'sans-serif';
 }
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;    
+.container h1 {
+    margin: 10px;
 }
-.post-container ul li a{
-    text-decoration: none;
-}
-.post-container ul li a p{
-    color: black;
-    font-size: 1.2em;
-}
-h1 {
-    font-family: 'Montserrat', 'sans-serif';
-}
-h2 {
-    font-family: 'Montserrat', 'sans-serif';
-    padding: 3%;
-    font-size: 1.2em;
-    margin-bottom: 0;
-}
-nav ul {
-    position: absolute;
-    width: 100%;
-    right: 0;
+.post-container {
     text-align: center;
-    background: white;
-    height: auto;
-    z-index: 2;
+    width: 90%;
+    margin: auto;
 }
-nav ul li a {
-    color: rgb(36,41,44);
+.blog-post a {
+    margin: 10px;
+    font-size: x-large;
     text-decoration: none;
-    display: block;
-    width: 100%;
-    padding: 1em 0;
-    background-color: white;
+    font-weight: bold;
+    color: #989f97;
 }
-nav ul li a:hover {
-    color: grey;
+.blog-post img {
+    object-fit:cover;
+    max-width: 100%;
+    height: auto;
 }
 .container {
     text-align: center;
-    padding: .8em 1.2em;
-}
-.container h1{
-    margin: 0;
-    padding-top: 3%;
-    padding-bottom: 0;
-    font-family: 'Montserrat', 'sans-serif';
-    font-size: 2.2em;
-}
-.logo {
-    width: 80px;
-    height: 50px;
-    z-index: 3;
+    padding: 0;
 }
 .hide-mobile {
     display: none;
 }
-header {
-    display: flex;
-    justify-content: space-between;
-    height: 40px;
-    z-index: 1;
-}
-.menu {
-    width: 25px;
-    margin-top: 50%;
-}
-.post-container ul{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
-.post-container ul li {
-    width: 50%;
-}
-.post-container ul li img {
-    justify-content: center;
-    width: 80%;
-}
-.post-container ul li p{
-    font-size: 1em;
-    margin: 0 0 .5em;
-}
 .blog-box {
-    box-shadow: 10px 10px 8px grey;
     height: 6em;
     margin-bottom: 2%;
-    background-color: #BDF3F0;
-}
-footer {
-    background: #5D5D5D;
-    color: white;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-}
-.footer-icon {
-    width: 30px;
-    height: 30px;
-}
-.footer-list {
-    display: flex;
-    justify-content: left;
-}
-.footer-list li {
-    margin-left: 5px;
-    margin-right: 5px;
-    padding: 0;
-}
-
-@media only screen and (min-width: 760px){
-    h2 {
-        font-size: 2em;
-        padding-top: 0;
-    }
 }
 
 @media only screen and (min-width: 1024px){
@@ -132,67 +44,19 @@ footer {
     .hide-desktop {
         display: none;
     }
-    .logo {
-        width: 110px;
-        height: 80px;
-    }
-    .menu {
-        z-index: 4;
-    }
-    .container h1 {
-        padding: 3% 0 0;
-    }
-    nav ul {
-        position: inherit;
-        width: auto;
-        background: none;
-        height: auto;
-        display: flex;
-        padding-top: 0;
-    }
-    nav ul li {
-        float: left;
-        margin-right: 20px;
-    }
-    nav ul li a{
-        color: black;
-        background: inherit;
-        text-align: right;
-        padding: .5em .5em;
-    }
-    nav ul li a:hover {
-        color: #28A9A1;
-        background: white;
-    }
-    nav ul li a:active {
-        color: #28A9A1;
-    }
-    .container {
-        width: 90%;
-        margin-left: 5%;
-    }
-    .post-container ul li {
-        width: 33.33%;
-    }
     .blog-box {
-        box-shadow: 10px 10px 8px grey;
         height: 15em;
         margin-bottom: 2%;
-        background-color: #BDF3F0;
     }
-    .footer-icon {
-        width: 40px;
-        height: 40px;
+    .blog-post {
+        height: 600px;
     }
-    .footer-list {
-        display: flex;
-        justify-content: center;
+    .blog-post img {
+        object-fit:cover;
+        max-width: 100%;
+        height: 80%;
     }
-    .footer-list li {
-        margin-left: 10px;
-        margin-right: 10px;
-        padding: 0;
-    }
+    
 }
 
 @media only screen and (min-width: 1200px){
@@ -204,39 +68,5 @@ footer {
     }
     .hide-desktop {
         display: none;
-    }
-
-    .menu {
-        z-index: 4;
-    }
-
-    nav ul {
-        position: inherit;
-        width: auto;
-        background: none;
-        height: auto;
-        display: flex;
-        padding-top: 0;
-    }
-
-    nav ul li {
-        float: left;
-        margin-right: 20px;
-    }
-
-    nav ul li a{
-        color: black;
-        background: inherit;
-        text-align: right;
-        padding: .5em .5em;
-    }
-
-    nav ul li a:hover {
-        color: #28A9A1;
-        background: white;
-    }
-
-    nav ul li a:active {
-        color: #28A9A1;
     }
 }
