--- a/style/main.css
+++ b/style/main.css
@@ -15,6 +15,15 @@ h1 {
     text-align: center;
     padding: .8em 1.2em;
 }
+.section-header {
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px 0;
+    font: 300 30px 'Oswald', sans-serif;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+  }
 .hide-mobile {
     display: none;
 }
