--- a/style/contact.css
+++ b/style/contact.css
@@ -123,4 +123,35 @@ body {
 .social-icon {
   justify-content: left;
 }
+
+#contact_form {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  }
+.row label{
+  color: black;
+  font-size: 18px;
+  margin-left: 10px;
+}
+input[type=text], textarea {
+  padding: 10px;
+  text-align: left;
+  margin: auto 0;
+  color: black;
+  width: 400px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  }
+input[type=text] {
+  height: 25px;
+}
+input[type=submit] {
+  background-color: #f2f0eb;
+  color: black;
+  font-size: 18px;
+  border-radius: 5px;
+  margin-left: 10px;
+  padding: 5px 10px;
+}
 }
