--- a/style/nav.css
+++ b/style/nav.css
@@ -102,6 +102,7 @@ header {
       position:absolute;
       width: 100%;
       background-color: #f2f0eb;
+      display: flex;
   }
   nav ul {
       width: 100%;
@@ -111,11 +112,12 @@ header {
   }
   nav ul li {
       display: inline-block;
+      list-style: none;
       margin: 0;
   }
   nav ul li a{
       color: #333;
-      padding: .5em 100px;
+      padding: .5em;
       text-decoration: none;
   }
   nav ul li a:hover {
